--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amaicherry-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://gatowaton.github.io/amaicherry-react",
+  "homepage": "https://amaicherry.onrender.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
